--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "4taxcloud",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "author": {
+    "name": "Henrique Tavares",
+    "email": "ihenrits@gmail.com",
+    "url": "https://henriquetavares.com"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
