feat: add react router import

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,7 +58,11 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {}
+      "typescript": {},
+      "babel-plugin-root-import": {
+        "rootPathPrefix": "~",
+        "rootPathSuffix": "src"
+      }
     }
   }
 }
