--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "polished": "^3.6.5",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
-    "typescript": "~3.7.2"
+    "typescript": "4.0.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
