--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
+    "swr": "^0.3.1",
     "typescript": "4.0.2"
   },
   "scripts": {
