--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://henriquetavares.com"
   },
   "dependencies": {
+    "@pismo/react-currency-input": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,12 +16,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-currency-input-field": "^2.2.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
+    "react-input-mask": "^2.0.4",
+    "react-intl-currency-input": "^0.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
@@ -46,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
