--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,7 +54,8 @@
         "tsx": "never"
       }
     ],
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "no-unused-expressions": "off"
   },
   "settings": {
     "import/resolver": {
