--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-scripts": "3.4.3",
     "styled-components": "^5.1.1",
     "swr": "^0.3.1",
-    "typescript": "4.0.2"
+    "typescript": "4.0.2",
+    "uuidv4": "^6.2.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
