--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "cpf-cnpj-validator": "^1.0.2",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-currency-input-field": "^2.2.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-input-mask": "^2.0.4",
     "react-intl-currency-input": "^0.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toast-notifications": "^2.4.0",
     "styled-components": "^5.1.1",
     "swr": "^0.3.1",
     "typescript": "4.0.2",
@@ -39,7 +40,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server server.json -p 3333"
   },
   "browserslist": {
     "production": [
@@ -56,7 +58,9 @@
   "devDependencies": {
     "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-toast-notifications": "^2.4.0",
     "@types/styled-components": "^5.1.2",
+    "@types/yup": "^0.29.6",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "babel-eslint": "^10.1.0",
