--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "3.4.3",
     "react-toast-notifications": "^2.4.0",
     "styled-components": "^5.1.1",
+    "sweetalert2": "^9.17.1",
     "swr": "^0.3.1",
     "typescript": "4.0.2",
     "uuidv4": "^6.2.3"
