--- a/package.json
+++ b/package.json
@@ -7,10 +7,32 @@
     "email": "ihenrits@gmail.com",
     "url": "https://henriquetavares.com"
   },
+  "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test:watch": "react-app-rewired test --env=jest-environment-jsdom-sixteen --watchAll --runInBand",
+    "test:coverage": "react-app-rewired test --env=jest-environment-jsdom-sixteen --coverage --watchAll false",
+    "eject": "react-scripts eject",
+    "server": "json-server server.json -p 3333"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/components/**/*.tsx",
+      "src/hooks/**/*.tsx",
+      "!src/*.tsx",
+      "!src/pages/**/*.tsx",
+      "!src/pages/**/*.ts",
+      "!src/services/*.ts",
+      "!src/routes/*.tsx"
+    ],
+    "moduleNameMapper": {
+      "~(.*)$": "<rootDir>/src/$1"
+    }
+  },
   "dependencies": {
     "@pismo/react-currency-input": "^2.0.2",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "10.4.9",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
@@ -37,13 +59,6 @@
     "typescript": "4.0.2",
     "uuidv4": "^6.2.3"
   },
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "server": "json-server server.json -p 3333"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -57,6 +72,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.4.1",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-toast-notifications": "^2.4.0",
@@ -64,6 +80,7 @@
     "@types/yup": "^0.29.6",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
+    "axios-mock-adapter": "^1.18.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "^6.5.0",
     "customize-cra": "^1.0.0",
@@ -77,7 +94,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "prettier": "^2.1.1",
-    "react-app-rewired": "^2.1.6"
+    "react-app-rewired": "^2.1.6",
+    "react-test-renderer": "^16.13.1"
   }
 }
