--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "react-app-rewired test --env=jest-environment-jsdom-sixteen --watchAll --runInBand",
     "test:coverage": "react-app-rewired test --env=jest-environment-jsdom-sixteen --coverage --watchAll false",
     "eject": "react-scripts eject",
-    "server": "json-server server.json -p 3333"
+    "server": "json-server server.json -p 3333",
+    "cypress:open": "cypress open"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -72,7 +73,9 @@
     ]
   },
   "devDependencies": {
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@testing-library/react-hooks": "^3.4.1",
+    "@types/cypress": "^1.1.3",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-toast-notifications": "^2.4.0",
@@ -84,6 +87,7 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-root-import": "^6.5.0",
     "customize-cra": "^1.0.0",
+    "cypress": "^5.0.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
