--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "test:coverage": "react-app-rewired test --env=jest-environment-jsdom-sixteen --coverage --watchAll false",
     "eject": "react-scripts eject",
     "server": "json-server server.json -p 3333",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --headless",
+    "cypress:server": "json-server server-test-cypress.json -p 3333"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -76,6 +78,7 @@
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@testing-library/react-hooks": "^3.4.1",
     "@types/cypress": "^1.1.3",
+    "@types/faker": "^4.1.12",
     "@types/react-input-mask": "^2.0.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-toast-notifications": "^2.4.0",
@@ -98,6 +101,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "faker": "^5.1.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "prettier": "^2.1.1",
     "react-app-rewired": "^2.1.6",
