--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "cpf-cnpj-validator": "^1.0.2",
+    "immer": "^7.0.8",
     "polished": "^3.6.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -53,9 +54,12 @@
     "react-icons": "^3.11.0",
     "react-input-mask": "^2.0.4",
     "react-intl-currency-input": "^0.2.5",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toast-notifications": "^2.4.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1",
     "sweetalert2": "^9.17.1",
     "swr": "^0.3.1",
@@ -80,6 +84,7 @@
     "@types/cypress": "^1.1.3",
     "@types/faker": "^4.1.12",
     "@types/react-input-mask": "^2.0.5",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-toast-notifications": "^2.4.0",
     "@types/styled-components": "^5.1.2",
